<?xml version="1.0" encoding="UTF-8"?>
<project
  xmlns:xsi = "http://www.w3.org/2001/XMLSchema-instance"
  xmlns = "http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation = "http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <description>
    Specifies build settings (plugins, profiles, etc.).
  </description>
  <modelVersion>4.0.0</modelVersion>
  <artifactId>idenator-build</artifactId>
  <packaging>pom</packaging>
  <name>idenator-build</name>
  <parent>
    <groupId>stincmale.idenator</groupId>
    <artifactId>idenator-version</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <relativePath>version.xml</relativePath>
  </parent>
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <configuration>
            <source>11</source>
            <target>11</target>
            <release>11</release>
            <encoding>${idenator.charset}</encoding>
            <debug>true</debug>
            <debuglevel>lines,vars,source</debuglevel>
            <showWarnings>true</showWarnings>
            <showDeprecation>true</showDeprecation>
            <compilerArgs>
              <arg>-Werror</arg>
              <arg>-Xlint:all,-processing</arg>
            </compilerArgs>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <configuration>
            <archive>
              <addMavenDescriptor>false</addMavenDescriptor>
              <manifest>
                <addDefaultImplementationEntries>false</addDefaultImplementationEntries>
                <addDefaultSpecificationEntries>false</addDefaultSpecificationEntries>
                <addClasspath>false</addClasspath>
              </manifest>
            </archive>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <configuration>
            <trimStackTrace>false</trimStackTrace>
            <useUnlimitedThreads>false</useUnlimitedThreads>
            <enableAssertions>true</enableAssertions>
            <argLine><!--TODO something like this should be done by the plugin implicitly for testing-->
              --add-opens stincmale.idenator/stincmale.idenator=ALL-UNNAMED
              --add-opens stincmale.idenator/stincmale.idenator.auxiliary=ALL-UNNAMED
              --add-opens stincmale.idenator/stincmale.idenator.evolution=ALL-UNNAMED
            </argLine>
          </configuration>
          <dependencies><!--TODO with the next version of the plugin this should be unnecessary-->
            <dependency>
              <groupId>org.ow2.asm</groupId>
              <artifactId>asm</artifactId>
              <version>6.2.1</version>
            </dependency>
          </dependencies>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
          <configuration>
            <doctitle>idenator ${project.version} Java API Documentation</doctitle>
            <author>false</author>
            <show>protected</show>
            <linksource>false</linksource>
            <bottom><![CDATA[<p>]]></bottom>
            <charset>${idenator.charset}</charset>
            <docencoding>${idenator.charset}</docencoding>
            <encoding>${idenator.charset}</encoding>
            <header>
              <![CDATA[
								<a href="${idenator.url}">idenator</a><br>
								Java API Documentation
							]]>
            </header>
            <footer>
              <![CDATA[Licensed under the <a href="${idenator.licenseUrl}">${idenator.licenseName}</a>]]>
            </footer>
            <locale>en</locale>
            <windowtitle>idenator Java API Documentation</windowtitle>
            <groups>
              <group>
                <title>All</title>
                <packages>
                  stincmale.idenator:stincmale.idenator.*
                </packages>
              </group>
            </groups>
            <excludePackageNames>stincmale.idenator.internal:stincmale.idenator.internal.*</excludePackageNames>
            <detectJavaApiLink>false</detectJavaApiLink>
            <detectLinks>false</detectLinks>
            <validateLinks>true</validateLinks>
            <links>
              <link>https://docs.oracle.com/en/java/javase/11/docs/api</link>
            </links>
            <includeDependencySources>false</includeDependencySources>
            <includeTransitiveDependencySources>false</includeTransitiveDependencySources>
            <serialwarn>true</serialwarn>
            <additionalparam>-Xdoclint:all</additionalparam>
          </configuration>
          <executions>
            <execution>
              <id>attach-aggregated-javadocs</id>
              <phase>package</phase>
              <goals>
                <goal>aggregate-jar</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-source-plugin</artifactId>
          <executions>
            <execution>
              <id>attach-sources</id>
              <phase>verify</phase>
              <goals>
                <goal>jar-no-fork</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>
    <defaultGoal>install</defaultGoal>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
      </plugin>
    </plugins>
  </build>
  <profiles>
    <profile>
      <id>default</id>
      <properties>
        <maven.test.skip>true</maven.test.skip>
      </properties>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>withTests</id>
      <properties>
        <maven.test.skip>false</maven.test.skip>
      </properties>
    </profile>
  </profiles>
</project>
